feat: add date phase 2 endpoints
